# learn_cmake

./: .gitignore  CMakeLists.txt
src/: common.cpp  common.hpp  main.cpp
